# paga.io-mitul

./: README.md  requirements.txt
scripts/: pwm_test.py  ws_server.py
serial_ws/: CMakeLists.txt  README.md
serial_ws/cmake/: Findpigpio.cmake
serial_ws/src/: CMakeLists.txt  main.cpp  serial.hpp
web/paga.io/: .env.development  .eslintrc.js  .gitignore  package-lock.json  package.json
web/paga.io/public/: index.html  manifest.json
web/paga.io/src/: App.js
web/paga.io/src/assets/scss/: app.scss  form.scss  helper.scss  layout.scss  mixins.scss  variable.scss
web/paga.io/src/components/common/: AlertModal.jsx  AppLoader.jsx  LeftProgressPanel.jsx  RightProgressPanel.jsx  TrainingSetConfirm.jsx
web/paga.io/src/components/createprofile/: CanoePickerDropdown.jsx  Step1GeneralInfo.jsx  Step2Weight.jsx  Step3ProfilePhoto.jsx
web/paga.io/src/components/profilestatistics/: CompareTrainingsChart.jsx  CurrentTrainingChart.jsx
web/paga.io/src/components/viewprofile/: ProfileDeletionModal.jsx
web/paga.io/src/containers/createprofile/: CreateProfile.jsx
web/paga.io/src/containers/information/: AppInformation.jsx
web/paga.io/src/containers/med/: MedDetail.jsx
web/paga.io/src/containers/power/: PowerDetail.jsx
web/paga.io/src/containers/scanbarcode/: ScanBarcode.jsx
web/paga.io/src/containers/workout/: Workout.jsx
web/paga.io/src/helper/: constant.js  database.js  profiles-api.js
web/paga.io/src/redux/: sagas.js  store.js
web/paga.io/src/routes/: index.jsx  protectedRoute.jsx
web/paga.io/src/services/: auth.js  index.js
web/test/: index.html
(+11 files in other folders)
